# poetry-conda

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml  release.yml
src/poetry_conda/: plugin.py
tests/: conftest.py  test_config.py  test_env.py
tests/test_project/: poetry.toml  pyproject.toml
workflows/: main.yml
